add default font-family

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -4,4 +4,5 @@
 // 设置全局默认样式
 body {
   font-size: 14px;
+  font-family: Noto Sans SC, Avenir, -apple-system, BlinkMacSystemFont, segoe ui, Roboto, helvetica neue, Arial, noto sans, sans-serif;
 }
